version: "0.0.1"
opam-version: "2.0"
maintainer: "jon@recoil.org"
authors: "various"
license: "ISC"
depends: [
  "ocaml" {>= "4.04"}
  "dune" {>= "2.9.1"}
  "js_of_ocaml" {>= "3.11.0"}
  "rresult"
  "astring"
  "js_of_ocaml-toplevel"
  "js_of_ocaml-compiler"
  "js_of_ocaml-ppx"
]
build : [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
synopsis: "JS Toplevel worker"
description: """
An OCaml toplevel designed to run as a web worker
"""
