version: "0.0.1"
opam-version: "2.0"
maintainer: "jon@recoil.org"
authors: "various"
license: "ISC"
depends: [
  "ocaml"
  "dune" {>= "2.9.1"}
  "ppx_deriving_rpc"
  "rresult"
]
build : [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
synopsis: "JS Toplevel worker IDL generator"
description: """
An OCaml toplevel designed to run as a web worker: IDL generator edition
"""

