version: "0.0.1"
opam-version: "2.0"
maintainer: "jon@recoil.org"
authors: "various"
license: "ISC"
homepage: "https://github.com/jonludlam/js_top_worker"
bug-reports: "https://github.com/jonludlam/js_top_worker/issues"
depends: [
  "ocaml"
  "dune" {>= "2.9.1"}
  "ppx_deriving_rpc"
  "rresult"
]
build : [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
synopsis: "JS Toplevel worker IDL generator"
description: """
An OCaml toplevel designed to run as a web worker: IDL generator edition
"""

