(executable
 (name example)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modes js)
 (modules example)
 (libraries js_top_worker_client lwt js_of_ocaml))

(executable
 (name worker)
 (modes byte)
 (modules worker)
 (link_flags (-linkall))
 (libraries js_top_worker imagelib base64 tyxml uutf))

(rule
 (targets worker.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --toplevel
   --pretty
   +toplevel.js
   +dynlink.js
   %{dep:worker.bc}
   -o
   %{targets})))
