(library
 (name js_top_worker_rpc)
 (public_name js_top_worker-rpc)
 (modules idl rpc rpcmarshal toplevel_api_gen)
 (libraries rresult mime_printer))

(library
 (name jsonrpc)
 (public_name js_top_worker-rpc.jsonrpc)
 (modules jsonrpc)
 (libraries js_top_worker-rpc yojson rresult mime_printer))

(library
 (name js_top_worker_client)
 (public_name js_top_worker-client)
 (modules js_top_worker_client)
 (libraries js_top_worker-rpc js_top_worker-rpc.jsonrpc  lwt brr yojson))

(library
 (name js_top_worker_rpc_def)
 (modules toplevel_api)
 (enabled_if
  (>= %{ocaml_version} 4.12))
 (package js_top_worker_rpc_def)
 (libraries mime_printer)
 (preprocess
  (pps ppx_deriving_rpc)))

(rule
 (target toplevel_api_gen.ml.gen)
 (enabled_if
  (>= %{ocaml_version} 4.12))
 (action
  (with-stderr-to
   %{target}
   (run ocamlc -stop-after parsing -dsource %{dep:toplevel_api.pp.ml}))))

(rule
 (alias runtest)
 (enabled_if
  (>= %{ocaml_version} 4.12))
 (action
  (diff toplevel_api_gen.ml toplevel_api_gen.ml.gen)))
