(library
 (name js_top_worker_rpc)
 (public_name js-top-worker.rpc)
 (modules idl rpc rpcmarshal toplevel_api_gen)
 (libraries rresult))

(library
 (name js_top_worker_client)
 (public_name js-top-worker.client)
 (modules js_top_worker_client)
 (libraries js-top-worker.rpc lwt brr))

(library
 (name js_top_worker_rpc_def)
 (public_name js-top-worker.rpc-def)
 (modules toplevel_api)
 (enabled_if
  (>= %{ocaml_version} 4.12))
 (preprocess
  (pps ppx_deriving_rpc)))

(rule
 (target toplevel_api_gen.ml.gen)
 (enabled_if
  (>= %{ocaml_version} 4.12))
 (action
  (with-stderr-to
   %{target}
   (run ocamlc -stop-after parsing -dsource %{dep:toplevel_api.pp.ml}))))

(rule
 (alias runtest)
 (enabled_if
  (>= %{ocaml_version} 4.12))
 (action
  (diff toplevel_api_gen.ml toplevel_api_gen.ml.gen)))
